Mejorando estetica, implementacion correcta de carrito, adaptacion mobile, falta seguir puliendo

--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,9 @@ h1 {
     max-height: 10rem;    
 }
 
-.banner-copy {
+/* .banner-copy {
     background-image: url(../img/banner-js-footer.jpg);
-}
+} */
 
 .banner-copy h3 {
     font-size: 3rem;
@@ -65,13 +65,16 @@ h1 {
 }
 
 .material-icons{
-    color: yellow;
+    cursor: pointer;
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
     width: 40px;
     height: 40px;
+    font-size: 2rem;
+    margin-right: 10px;
 }
 
 .container__contador {
@@ -79,15 +82,21 @@ h1 {
 }
 
 .cantidad-items {
+    text-align: center;
     position: absolute;
-    color: white;
-    bottom: -4px;
-    right: -1px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    color: black;
+    background-color: aliceblue;
+    bottom: -2px;
+    right: 6px;
 }
 
 .container-tienda {
     max-width: 50rem;
     margin: 1.25rem auto;
+    margin-top: 50px;
     padding: 1.25rem;
     background-color: white;
     border-radius: .5rem;
@@ -101,11 +110,18 @@ button {
 .container__carrito {
     background-color: aliceblue;
     z-index: 1;
+    display: none;
     min-width: 400px;
     max-height: 700px;
     position: absolute;
     right: 10px;
     top: 70px;
+    padding: 20px 10px;
+    border-radius: .5rem;
+}
+
+.hidden__cart {
+    display: block;
 }
 
 .container__confirmacion-compra {
@@ -116,12 +132,18 @@ button {
 }
 
 .producto {
-    max-width: 500px;
+    max-width: 700px;
     display: flex;
     justify-content: flex-start;
     gap: 30px;
     align-items: center;
     margin: 10px auto;
+    padding: 20px;
+}
+
+.producto p {
+    font-size: 1.6rem;
+    color: red;
 }
 
 .img__productos {
@@ -141,10 +163,10 @@ button {
 /* contacto */
 
 .container-contacto {
-    padding: 10px 100px;
+    padding: 40px 100px;
     background-color: rgb(23, 70, 110);
     display: flex;
-    font-size: 1.6rem;
+    font-size: 1.9rem;
     flex-direction: column;
     margin: 200px auto;
     text-align: center;
@@ -161,7 +183,7 @@ button {
 .form-login {
     display: flex;
     flex-direction: column;
-    width: 600px;
+    max-width: 600px;
     margin: 100px auto;
 }
 
